<resources>

    <string name="about">About</string>
    <string name="accessibility">Accessibility</string>
    <string name="accessibility_service_description">
        Let Lunar Launcher put the device to sleep (API 28+).
    </string>
    <string name="accessibility_service_label">Lock Service</string>
    <string name="acknowledgements">
        <b>Acknowledgements</b>\n
        <i><a href="https://github.com/cachapa/ExpandableLayout">https://github.com/cachapa/ExpandableLayout</a></i>
    </string>
    <string name="activity_browser">Browse activities</string>
    <string name="add_new">Add New</string>
    <string name="add_widget">Add Widget</string>
    <string name="advance">Advance</string>
    <string name="amazon" translatable="false">Amazon</string>
    <string name="appearances">Appearances</string>
    <string name="application_theme">Choose Application Theme</string>
    <string name="app_alignment">App Alignment</string>
    <string name="app_drawer">App Drawer</string>
    <string name="app_drawer_layout">App Drawer Layout</string>
    <string name="app_info">Open App Info window</string>
    <string name="app_store">Visit on app market</string>
    <string name="apps_count">Apps Count</string>
    <string name="argb" translatable="false">AARRGGBB</string>
    <string name="authentication_error">Authentication error</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="authentication_subtitle">
        Authenticate with your device credential to proceed.
    </string>
    <string name="background">Background</string>
    <string name="back_home">Always Go Back to Home Screen</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="center">Center</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="choose_icon_pack">Choose Icon Pack</string>
    <string name="choose_launcher">Choose Default Launcher</string>
    <string name="city_name">City Name</string>
    <string name="contact">Contact</string>
    <string name="copied_message">Copied to clipboard</string>
    <string name="cpu" translatable="false">CPU</string>
    <string name="dark_theme">Dark</string>
    <string name="date_format">Date Format</string>
    <string name="decrease_height">Decrease Height</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_confirmation">
        Delete all to-do entries?
    </string>
    <string name="detailed_info">See detail information</string>
    <string name="developer_name">Developed by Md. Rasel Hossain</string>
    <string name="device_admin">Device Admin</string>
    <string name="device_admin_description">
        Allow to put the device to sleep on double tap gesture
    </string>
    <string name="donate">Donate</string>
    <string name="double_tap_lock">Double Tap Lock Method</string>
    <string name="empty_text_field">The text field is empty</string>
    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="feed_url">RSS Feed URL</string>
    <string name="first_install">First Install</string>
    <string name="follow_system">Follow System</string>
    <string name="free">Free</string>
    <string name="freeform">Open in pip mode</string>
    <string name="frequency">Frequency</string>
    <string name="got_it">Got it</string>
    <string name="grid">Grid</string>
    <string name="grid_columns_count">No of Grid Columns</string>
    <string name="hide_status_bar">Hide Status Bar</string>
    <string name="icon_pack_not_found">Sorry, you don\'t have any icon pack installed.</string>
    <string name="icon_size">Shortcut &amp; App Icon Size</string>
    <string name="image_pick_failed">Could not fetch image</string>
    <string name="increase_height">Increase Height</string>
    <string name="last_update">Last Update</string>
    <string name="later">Later</string>
    <string name="left">Left</string>
    <string name="light_theme">Light</string>
    <string name="list">List</string>
    <string name="list_with_icon">List with Icon</string>
    <string name="lunar_settings">Lunar Settings</string>
    <string name="misc">Misc</string>
    <string name="misc_info_titles">
        Device Uptime\nSystem Active\nMemory Threshold\nBattery Temperature\nBattery Voltage
        \nRoot Storage\nIPv4\nIPv6
    </string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="na" translatable="false">N/A</string>
    <string name="negative">Negative</string>
    <string name="null_app_store_message">
        Couldn\'t find any app store on this device.
    </string>
    <string name="owm_key">OWM API Key</string>
    <string name="positive">Positive</string>
    <string name="proceed">Proceed</string>
    <string name="quick_launch">Quick Launch</string>
    <string name="ram" translatable="false">RAM</string>
    <string name="reset">Reset</string>
    <string name="reset_message">
        This operation will clear all data stored for this app, and can\'t be undone.
    </string>
    <string name="restart">Restart</string>
    <string name="restart_message">
        The changes you have just made require app restart to take effect. Do you want to restart now?
    </string>
    <string name="restart_now">Restart now?</string>
    <string name="right">Right</string>
    <string name="root">Root</string>
    <string name="rss_feed">RSS Feed</string>
    <string name="scrollbar_height">Height of A-Z Scrollbar</string>
    <string name="sdk" translatable="false">SDK</string>
    <string name="search_with_keyboard">Start with Keyboard</string>
    <string name="share">Share the apk file</string>
    <string name="share_apk_message">Share APK via</string>
    <string name="shortcut_count">Number Of Shortcuts (URL/Contact)</string>
    <string name="show_city">Show City Name With Weather</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="source_code">Source Code</string>
    <string name="star">Star</string>
    <string name="support">Support</string>
    <string name="support_message">Support the developer to keep this app gratis and alive.\n
        \n<li><b>Donate:</b> If possible, make direct donations to help and encourage the developer.</li>
        \n<li><b>Amazon:</b> Use the affiliate link while shopping on Amazon to reward the developer.</li>
        \n<li><b>Star:</b> Star on GitHub to show your support.</li>
    </string>
    <string name="system_stats">System Stats</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="temperature">Temperature</string>
    <string name="temp_unit">Temperature Unit</string>
    <string name="time_date">Time — Date</string>
    <string name="time_format">Time Format</string>
    <string name="todo">To-do</string>
    <string name="todo_count">Number Of To-Do Entries On Home Screen</string>
    <string name="todo_manager">To-Do Manager</string>
    <string name="todo_manager_lock">Lock To-Do Manager</string>
    <string name="total">Total</string>
    <string name="twelve">12 Hour</string>
    <string name="twenty_four">24 Hour</string>
    <string name="uid" translatable="false">UID</string>
    <string name="unable_to_launch">Unable to launch</string>
    <string name="uninstall">Uninstall the application</string>
    <string name="update">Update</string>
    <string name="url">URL</string>
    <string name="used">Used</string>
    <string name="version">Version</string>
    <string name="wallpaper_change_success">Wallpaper changed</string>
    <string name="weather">Weather</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Welcome to Lunar Launcher.
        \n\nAfter closing this dialog, you will be asked to grant permissions needed for the app to work as expected.
        \n\n<li><b>Modify system settings —</b> To control brightness using a slider</li>
        \n<li><b>Phone —</b> To make call from shortcuts</li>
        \n\nIt\'s a copylefted libre software; check, change and share with all.
        \n\n<b><u>Gestures:</u></b>
        \n<li>Swipe up — Quick access dialog</li>
        \n<li>Swipe down — Notification panel</li>
        \n<li>Swipe right — Feeds</li>
        \n<li>Swipe left — App drawer</li>
        \n<li>Tap and hold inside battery indicator — Launcher settings</li>
        \n<li>Tap and hold in the lower part of the screen — To-Do manager</li>
        \n<li>Double tap — Device lock/sleep (enable from settings)</li>
        \n<li>Tap and hold the favourite item — Remove favourite</li>
        \n\nMore info on the wiki page at GitHub.
    </string>
    <string name="wiki" translatable="false">Wiki</string>

</resources>
