<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:hint="@string/feed_url"
        app:endIconMode="clear_text"
        style="@style/OutlinedTextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_feed_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_tap_lock"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_lock_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_lock_accessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_lock_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_admin"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_lock_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_theme"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_system_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_system"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_light_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok"
            style="@style/Widget.Material3.Button.ElevatedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.appcompat.widget.LinearLayoutCompat>
