<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:hint="@string/city_name"
        app:endIconMode="clear_text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:hint="@string/owm_key"
        app:endIconMode="clear_text"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_owm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_unit"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/temp_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_city"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/city_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_city_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/positive"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_city_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.appcompat.widget.LinearLayoutCompat>