<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/oneNinetySix"
        android:background="@android:color/transparent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunar_settings"
            android:textColor="?attr/colorControlNormal" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:background="@drawable/rounded_bg_top"
        android:backgroundTint="?attr/colorSurface"
        android:paddingHorizontal="@dimen/thirtySix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:singleSelection="true"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/timeDate"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_date"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/weather"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weather"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/todo"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apps"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_drawer"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appearances"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appearances"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/misc"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/misc"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advance"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advance"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/about"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/support"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textAllCaps="true"
                android:textStyle="bold" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twelve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>