<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_format"
        android:textSize="16sp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/time_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_twelve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_system_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_system"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_twenty_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_four"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_format"
        app:endIconMode="clear_text"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_format"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>